@@ -34,17 +34,17 @@
 (luna-define-class shimbun-ffii (shimbun-rss) ())
 
 (defvar shimbun-ffii-group-alist
-  '(("news.software-patent.en" . "SwpatcninoEn")
-    ("news.software-patent.ffii.en" . "SwpatcninoEn-ffii")
-    ("news.software-patent.de" . "SwpatcninoDe")
-    ("news.software-patent.ffii.de" . "SwpatcninoDe-ffii")
-    ("news.software-patent.fr" . "SwpatcninoFr")
-    ("news.software-patent.ffii.fr" . "SwpatcninoFr-ffii")
-    ("news.software-patent.nl" . "SwpatcninoNl")
-    ("news.software-patent.ffii.nl" . "SwpatcninoNl-ffii")
-    ("news.information-infrastructure.en" . "FfiinewsEn")
-    ("news.information-infrastructure.de" . "FfiinewsDe")
-    ("news.project.en" . "FfiiprojNewsEn")))
+  '(("en.software-patents" . "SwpatcninoEn")
+    ("en.software-patents.ffii" . "SwpatcninoEn-ffii")
+    ("en.information-infrastructure" . "FfiinewsEn")
+    ("en.project" . "FfiiprojNewsEn")
+    ("de.software-patente" . "SwpatcninoDe")
+    ("de.software-patente.ffii" . "SwpatcninoDe-ffii")
+    ("de.informations-infrastruktur" . "FfiinewsDe")
+    ("fr.brevets-logiciels" . "SwpatcninoFr")
+    ("fr.brevets-logiciels.ffii" . "SwpatcninoFr-ffii")
+    ("nl.softwarepatenten" . "SwpatcninoNl")
+    ("nl.softwarepatenten.ffii" . "SwpatcninoNl-ffii")))
 
 (defvar shimbun-ffii-server-name "FFII")
 (defvar shimbun-ffii-from-address "info@ffii.org")
